Fixed top-nav spacing issue

--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -157,10 +157,6 @@
     background: $primary;
     padding: 0 calc((100vw - $content_max_width) / 2);
     height: 40px;
-
-    @include lg {
-      padding: 0 30px;
-    }
 }
 
 #header-ctas {
